# windows-schedule

./: .gitignore  README.md  pyproject.toml
docs/: 技术变更记录.md  故障排查.md  文档索引.md  部署指南.md
scripts/: install.bat  uninstall.bat
src/: __init__.py  models.py  scheduler.py  task_executor.py  task_loader.py
tasks/: douyin-read-files-cleaner.yaml  douyin-uncollect-cleaner.yaml  douying-collect.yaml
